--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@nomiclabs/buidler-ethers": "^1.3.4",
     "@nomiclabs/buidler-waffle": "^1.3.5",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^3.2.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^3.4.1",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@openzeppelin/hardhat-upgrades": "^1.8.2",
     "@typechain/ethers-v5": "^2.0.0",
@@ -65,7 +67,8 @@
     "ts-node": "^9.0.0",
     "typechain": "^3.0.0",
     "typechain-target-ethers": "^1.0.4",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "web3": "^1.2.11"
   },
   "husky": {
     "hooks": {
